lab3 added, hangman game not completed yet

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ h1 {
   color: crimson;
   border: darkgray;
 }
-p {
+section {
   background-color: darkmagenta;
   color: black;
   box-shadow: black;
