hangmna game finished, polished js, added css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,24 @@
 body {
-  background-color: cadetblue;
+  background-color: rgb(240, 100, 73);
 }
 h1 {
+  background-color: rgb(91, 195, 235);
   font-style: oblique;
-  color: crimson;
-  border: darkgray;
+  color: rgb(237, 230, 227);
+  border-color: rgb(237, 230, 227);
+}
+nav ul {
+  background-color: rgb(218, 218, 217);
+}
+
+ul li {
+  display: inline-block;
+}
+ul li a {
+  text-decoration: rgb(240, 100, 73);
 }
 section {
-  background-color: darkmagenta;
-  color: black;
+  background-color: rgb(54, 56, 46);
+  color: rgb(218, 218, 217);
   box-shadow: black;
 }
